--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ header {
 }
 .header-imagine{
     height: 30px;
-    padding-top: 24px;
+  
 }
 .color-grigio{
     font-family: Arial, Helvetica, sans-serif;
@@ -20,4 +20,11 @@ header {
 }
 .font-piccolo{
     font-size: 10px;
+}
+main{
+    font-family: Arial, Helvetica, sans-serif;
+}
+.didascalia{
+    font-size: 10px;
+
 }
