--- a/css/style.css
+++ b/css/style.css
@@ -31,3 +31,17 @@ main{
 .evidenziato{
     background-color: yellow;
 }
+.table-intestazione{
+    width: 100%;
+    background-color: aqua;
+    color: white;
+
+}
+.table-contenuto-dispari{
+    background-color: aquamarine;
+}
+table, th, td {
+    border: 0px solid black;
+    border-collapse: collapse;
+    font-family: Arial, Helvetica, sans-serif;
+  }
