--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 header {
     background-color: rgb(16, 161, 205);
-    height: 55px;
+    height: 100px;
     background-image: url(../img/pattern.png);
-    background-size: 15%;
+    background-size: 300px;
     background-repeat: repeat;
 
 }
@@ -41,16 +41,17 @@ main{
     background-color: aquamarine;
 }
 table, th, td {
-    border: 0px solid black;
+  
     border-collapse: collapse;
     font-family: Arial, Helvetica, sans-serif;
+    text-align: justify;
   }
   h5{
     color: gray;
     font-size: 15px;
     font-family: Arial, Helvetica, sans-serif;
   }
-.prima-proposta{
+.proposta{
     background-image: url(../img/monitor.jpg);
     background-size: contain;
     background-repeat: no-repeat;
@@ -60,15 +61,14 @@ table, th, td {
     font-size: 25px;
     text-align:center ;
     font-weight: bold;
+    margin-bottom: 10px;
 }
-.seconda-proposta{
+.computer{
+    background-image: url(../img/monitor.jpg);
+}
+.grafico{
     background-image: url(../img/graph.jpg);
-    background-size: contain;
-    background-repeat: no-repeat;
-    height: 180px;
-    width: 250px;    
-    color: white;
-    font-size: 25px;
-    text-align:center ;
-    font-weight: bold;
+}
+.large{
+    width: 50%;
 }
